--- a/index.css
+++ b/index.css
@@ -47,12 +47,22 @@ h6 {
   font-family: "Georgia", serif;
   color: #222; /* Slightly darker for emphasis */
 }
+.heading{
+  display: flex;
+  justify-content: left;
+  padding:4px;
+  gap:0px
+}
 
+#SCTR{
+    font-size: 24px;
+}
 /* Custom styling for h1 */
 h1 {
   font-family: "mea-culpa-regular";
-  font-size: 40px;
-  text-align: center;
+  font-size: 70px;
+  /* text-align: center; */
+  padding: 0px;
 }
 
 h2 {
@@ -87,14 +97,14 @@ p {
 .page-1 {
   display: grid;
   grid-template-rows: 1fr 1fr;
-  margin: 60px;
 }
 
 .image-container {
-  margin-right: 20px;
+  /* margin-right: 20px; */
   justify-content: center;
-  margin: 0px;
-  padding: 0px;
+  margin: 6px;
+  margin-top: 24px;
+
 }
 
 .image-container img {
@@ -107,12 +117,12 @@ p {
 .text-container {
   display: grid;
   margin: 2px;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr 1fr;
+  grid-template-columns:1fr 1fr;
+  grid-template-rows: 1 1;
   padding: 2px;
-  grid-gap: 20px 40px;
+  grid-gap: 10px 20px;
 }
-.College {
+.Vision {
   margin: 0px 2px;
   padding: 0px 2px;
 }
@@ -662,14 +672,23 @@ tr:hover {
 
 /* Style for the text itself */
 .gallery-text h2 {
-  text-align: center;
+  text-align:center;
   font-size: 40px;
+  line-height: 1.25;
+  /* display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin-left: 30px; */
   /* margin: 0; Remove any default margin */
 }
 
-/* #ITdept {
+#Dept_of{
+  font-size: 28px;
+}
+#ITdept {
   color: #1976d2;
-} */
+}
+
 
 
 /*about us */
