--- a/index.css
+++ b/index.css
@@ -117,7 +117,11 @@ p {
   height: auto;
   margin: 0px;
 }
-
+.Grid{
+  display: grid;
+  grid-template-columns: repeat(3,1fr);
+  grid-template-rows: repeat(3,1fr);
+}
 .text-container {
   display: grid;
   margin: 2px;
