--- a/index.css
+++ b/index.css
@@ -121,14 +121,23 @@ p {
   align-items: center;
   justify-content: center;
   text-align: center;
+  margin: 2rem;
+}
+#indexx{
+  font-size: 2.8rem;
+  margin: 2rem;
+  margin-bottom: 4rem;
+}
+.Grid a{
+  text-decoration: none;
+  color: #000;
 }
 .Grid{
   display: grid;
   justify-content:center;
-  /* align-items: center; */
   grid-template-columns: repeat(3,1fr);
   grid-template-rows: repeat(3,1fr);
-  gap: 5rem;
+  gap: 4rem;
   font-size: 1.4rem;
 }
 .text-container {
@@ -151,11 +160,10 @@ p {
   margin: 60px;
 }
 
-
 .articles-container{
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr ;
+  /* grid-template-rows: 1fr 1fr ; */
   padding: 0px;
   row-gap: 0rem;
   column-gap: 2rem;
@@ -647,6 +655,19 @@ tr:hover {
   transition: transform 0.3s ease, box-shadow 0.3s ease;
   width: 150px;
 }
+
+
+.student-box-1 {
+  background-color: rgba(255, 255, 255, 0.6);
+  border: 1px solid rgba(255, 255, 255, 0.5);
+  border-radius: 10px;
+  padding: 15px;
+  text-align: center;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+  width: 270px;
+}
+
 
 .student-box:hover {
   transform: scale(1.1);
