--- a/index.css
+++ b/index.css
@@ -1340,7 +1340,10 @@ tr:hover {
 /* Mobile View */
 @media (max-width: 480px) {
   body {
-    padding: 0;
+    padding: 3rem;
+  }
+  .container{
+    padding:1rem;
   }
 
   h1 {
