--- a/index.css
+++ b/index.css
@@ -1336,6 +1336,27 @@ tr:hover {
     max-width: 85%;
   }
 }
+.achievementBox{
+  background-color: rgba(255, 255, 255, 0.6);
+  border: 1px solid rgba(255, 255, 255, 0.5);
+  border-radius: 10px;
+  padding: 15px;
+  text-align: center;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+  width: 270px;
+  overflow: hidden;
+}
+.achievementBox img{
+  width: 100%;
+  height: auto;
+}
+.hide{
+  display: none;
+}
+.hide:hover{
+  display: block;
+}
 
 /* Mobile View */
 @media (max-width: 480px) {
