--- a/index.css
+++ b/index.css
@@ -366,8 +366,8 @@ p {
   position: absolute;
   bottom: 15px;
   right: 15px;
-  width: 80px;
-  height: 80px;
+  width: 100px;
+  height: 100px;
   border-radius: 50%;
   overflow: hidden;
   border: 2px solid rgba(0, 0, 0, 0.2);
@@ -377,6 +377,11 @@ p {
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+/* Enlarge the image on hover */
+.profile-image:hover {
+  transform: scale(1.2);
 }
 
 /* Responsive Design */
