--- a/index.css
+++ b/index.css
@@ -14,6 +14,9 @@ body {
   min-height: 100vh; /* Full height viewport */
   padding: 20px;
 }
+html {
+  scroll-behavior: smooth;
+}
 
 /* Universal Reset */
 * {
@@ -179,7 +182,7 @@ p ,li{
   display: grid;
   justify-content:center;
   grid-template-columns: repeat(3,1fr);
-  grid-template-rows: repeat(3,1fr);
+  /* grid-template-rows: repeat(3,1fr); */
   gap: 4rem;
   font-size: 1.4rem;
 }
@@ -1373,11 +1376,18 @@ tr:hover {
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
   transition: transform 0.3s ease, box-shadow 0.3s ease;
   width: 270px;
+  
   overflow: hidden;
+}
+
+.grid3x1{
+  display: grid;
+  grid-template-columns: repeat(2,1fr);
+
 }
 .achievementBox img{
   width: 100%;
-  height: 20%;
+  height: auto;
 }
 .hide{
   display: none;
