--- a/index.css
+++ b/index.css
@@ -18,6 +18,9 @@ html {
   scroll-behavior: smooth;
 }
 
+.PDA{
+  /* width: 100%; */
+}
 /* Universal Reset */
 * {
   padding: 0;
@@ -126,11 +129,13 @@ p ,li{
   text-align: center;
   margin: 2rem;
 }
+
 #indexx{
   align-items: center;
   justify-content: center;
   text-align: center;
   font-size: 2.8rem;
+  line-height: 4rem;
   margin: 2rem;
   margin-bottom: 4rem;
 
