--- a/index.css
+++ b/index.css
@@ -103,7 +103,7 @@ p ,li{
   grid-template-rows: 1fr 1fr;
 }
 
-.image-container {
+ .image-container {
   /* margin-right: 20px; */
   justify-content: center;
   margin: 6px;
@@ -116,6 +116,22 @@ p ,li{
   width: 100%;
   height: auto;
   margin: 0px;
+} 
+.image-container, .faculty-container {
+  width: 100%; /* Adjust width as needed */
+  /* max-height: 400px; Set a uniform height */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+}
+
+.image-container img, .faculty-container img {
+  width: 100%; /* Ensures both images are the same width */
+  height: 100%; /* Maintains aspect ratio */
+  object-fit: cover; /* Ensures uniformity */
+  /*max-height: 500px;  Same max height */
+  margin-bottom: 2rem;
 }
 .index{
   align-items: center;
@@ -142,6 +158,7 @@ p ,li{
   justify-self: center;
 
 }
+
 
 .Gallery-2-big img{
   width: 100%;
