--- a/index.css
+++ b/index.css
@@ -1497,42 +1497,42 @@ tr:hover {
 @media (max-width: 480px) {
   .image-container 
   {
-    box-sizing: border-box;
+    /* box-sizing: border-box; */
     margin: 0;
     padding: 0;
-    justify-content: center;
+    /* justify-content:space-between; */
     width: 100%;
     /* height: fit-content;  */
   }
   .image-container img{
-    width: 100%;
-    height: auto;
-    display: block;
+    width: auto;
+    height: 470px;
+    /* display: block; */
   }
   body {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding: 16px;
+    /* padding: 16px; */
   }
   .container{
-    padding:1rem;
+    padding:10px;
   }
 
   h1 {
-    font-size: 32px;
+    font-size: 34px;
     line-height: 9vmin;
     letter-spacing: -0.3px;
   }
 
   h2 {
-    line-height: 9vmin;
-    font-size: 18px;
+    line-height: 10vmin;
+    font-size: 22px;
     letter-spacing: -0.2px;
   }
 
   p {
-    font-size: 14px;
+    font-size: 18px;
     line-height: 1.4;
   }
 
@@ -1546,7 +1546,7 @@ tr:hover {
 
   .Grid {
     grid-template-columns:1fr 1fr;
-    gap: 0.8rem;
+    gap: 3rem;
     font-size: 1rem;
   }
 
