--- a/index.css
+++ b/index.css
@@ -287,13 +287,14 @@ p ,li{
 }
 .article p ,h2,ul
 {
-  line-height: 5.1vmin;
+  line-height: 2rem;
 }
 .article-title h3 {
   font-size: 1.7rem;
 }
 
 .article-title p {
+  
   font-size: 1.2rem;
 }
 
@@ -1532,7 +1533,7 @@ tr:hover {
   }
 
   p {
-    line-height: 12vmin;
+    line-height: 5px;
     font-size: 18px;
     line-height: 1.4;
   }
